[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radtts"
version = "0.1.0"
description = "Local-first voice synthesis and transcript-aware audio pipeline"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "RADTTS" }]
license = { text = "MIT" }
dependencies = [
  "pydantic>=2.8,<3",
  "numpy>=1.26",
  "soundfile>=0.12",
  "imageio-ffmpeg>=0.5",
  "itsdangerous>=2.2,<3",
]

[project.optional-dependencies]
asr = [
  "faster-whisper>=1.2.0,<2",
  "onnxruntime>=1.24.0,<2",
]
tts = [
  "qwen-tts==0.1.1",
  "torch==2.10.0",
  "torchaudio==2.10.0",
  "transformers==4.57.3",
  "accelerate==1.12.0",
  "einops>=0.8,<1",
  "sox>=1.5,<2",
  "librosa>=0.11,<0.12",
]
api = [
  "fastapi>=0.135,<1",
  "uvicorn>=0.30,<1",
  "gunicorn>=23,<24",
  "jinja2>=3.1,<4",
  "python-multipart>=0.0.22,<0.1",
]
dev = ["pytest>=8.3", "pytest-cov>=5.0"]
all = [
  "faster-whisper>=1.2.0,<2",
  "onnxruntime>=1.24.0,<2",
  "qwen-tts==0.1.1",
  "torch==2.10.0",
  "torchaudio==2.10.0",
  "transformers==4.57.3",
  "accelerate==1.12.0",
  "einops>=0.8,<1",
  "sox>=1.5,<2",
  "librosa>=0.11,<0.12",
  "fastapi>=0.135,<1",
  "uvicorn>=0.30,<1",
  "gunicorn>=23,<24",
  "jinja2>=3.1,<4",
  "python-multipart>=0.0.22,<0.1",
  "pytest>=8.3",
  "pytest-cov>=5.0",
]

[project.scripts]
radtts = "radtts.cli:main"
radtts-api = "radtts.api:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
radtts = ["templates/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
